--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,3 +104,35 @@ body {
     margin-left: 20%;
     border-radius: 10px;
 }
+
+/* ------------------- About Us */
+
+.aboutus {
+    text-align: center;
+    margin-top: 20px;
+    font-family: "Oswald", sans-serif;
+    font-weight: 600;
+    font-size: 40px;
+    color: #272525;
+}
+
+.about-content {
+    text-align: left;
+    margin-left: 20px;
+    margin-top: 30px;
+}
+
+.about-content h2 {
+    margin-left: 35px;
+    font-family: "Oswald", sans-serif;
+}
+
+@media (min-width:991px){
+.about-content h2 {
+    margin-left: 30%;  
+}
+}
+
+.about-content p {
+    margin-top: 20px;
+}
