--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,16 +123,30 @@ body {
 }
 
 .about-content h2 {
-    margin-left: 35px;
+    margin-left: 40px;
     font-family: "Oswald", sans-serif;
 }
 
 @media (min-width:991px){
 .about-content h2 {
-    margin-left: 30%;  
+    margin-left: 33%;  
 }
 }
 
 .about-content p {
     margin-top: 20px;
+    width: 350px;
+}
+
+@media (min-width:991px){
+.about-content p{
+    width: 350px;
+    margin-top: 40px;
+    margin-left: 28%;
+    font-size: 16px;
+}
+}
+
+.about-image {
+    
 }
