--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
 html,body
 {
     width: 100%;
-    height: 100%;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
@@ -118,8 +117,8 @@ body {
 
 .about-content {
     text-align: left;
-    margin-left: 20px;
-    margin-top: 30px;
+    margin-left: 10%;
+    margin-top: 70px;
 }
 
 .about-content h2 {
@@ -135,7 +134,8 @@ body {
 
 .about-content p {
     margin-top: 20px;
-    width: 350px;
+    width: 75%;
+    margin-left: 20px;
 }
 
 @media (min-width:991px){
@@ -145,8 +145,4 @@ body {
     margin-left: 28%;
     font-size: 16px;
 }
-}
-
-.about-image {
-    
 }
