--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,20 +24,24 @@ body {
     width: 100% auto;
 }
 
+.bg-classes {
+    background-color: #272525;
+}
+
 .bg-cardio-class {
-    background-color: #98C1D9;
+    background-color: #060b0f;
 }
 
 .bg-sculpt-class {
-
+    background-color: #1b2432;
 }
 
 .bg-mind-class {
-
+    background-color: #3D5A80;
 }
 
 .bg-func-class {
-
+    background-color: #293241;
 }
 
 /* ------------------- Heading */
@@ -57,6 +61,7 @@ body {
 
 .nav {
     margin: 0;
+    position: sticky;
 }
 
 #nav li {
@@ -183,32 +188,64 @@ body {
     text-align: center;
     font-family: "Oswald", sans-serif;
     text-decoration: underline;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    color: #fafafa;
 }
 
 .cardio-class {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    color: #fafafa;
 }
 
 .cardio-class p {
     margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .sculpt-class {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    color: #fafafa;
 }
 
 .sculpt-class p {
     margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 .mind-class {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    color: #fafafa;
 }
+
+.mind-class p {
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
 
 .func-class {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 55px;
+    padding-bottom: 55px;
+    color: #fafafa;
+}
+
+.func-class p {
+    margin-top: 10px;
+    margin-left: 40px;
+    margin-right: 40px;
 }
