--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,11 +29,11 @@ body {
 }
 
 .bg-cardio-class {
-    background-color: #060b0f;
+    background-color: #ffb703;
 }
 
 .bg-sculpt-class {
-    background-color: #1b2432;
+    background-color: #fb8500;
 }
 
 .bg-mind-class {
@@ -61,7 +61,8 @@ body {
 
 .nav {
     margin: 0;
-    position: sticky;
+    width: 100%;
+    padding-bottom: 20px;
 }
 
 #nav li {
@@ -198,7 +199,7 @@ body {
     margin-top: 0;
     padding-top: 55px;
     padding-bottom: 55px;
-    color: #fafafa;
+    color: #030303;
 }
 
 .cardio-class p {
@@ -212,7 +213,7 @@ body {
     margin-top: 0;
     padding-top: 55px;
     padding-bottom: 55px;
-    color: #fafafa;
+    color: #030303;
 }
 
 .sculpt-class p {
@@ -230,7 +231,6 @@ body {
 }
 
 .mind-class p {
-    margin-top: 10px;
     margin-left: 40px;
     margin-right: 40px;
 }
@@ -249,3 +249,67 @@ body {
     margin-left: 40px;
     margin-right: 40px;
 }
+
+
+/* ------------------- Sign Up */
+
+.sign-heading {
+    text-align: center;
+}
+
+.sign-heading h1 {
+    font-family: "oswald",sans-serif;
+    text-decoration: underline;
+    margin-top: 40px;
+}
+
+.sign-heading h2 {
+    margin-top: 20px;
+}
+
+/* ------------------- Sign up form */
+
+.form {
+    text-align: center;
+    background-color: rgba(0,0,0,0.7);
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 15px;
+    margin-top: 20px;
+    color: #fafafa;
+}
+
+@media (max-width:720px){
+.form {
+        text-align: center;
+        background-color: rgba(0,0,0,0.7);
+        width: 80%;
+        border-radius: 15px;
+        margin-top: 20px;
+        color: #fafafa;
+        margin-left: 10%;
+}
+}
+
+.fname-form {
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.lname-form {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.email-form {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 35px;
+}
+
+.form-button {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+
