--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Karla&family=Oswald:wght@300&display=swap');
 
+/* ------------------- Code found on stack overflow to help resolve gap at the end of navbar*/
+
 html,body
 {
     width: 100%;
@@ -7,6 +9,8 @@ html,body
     padding: 0px;
     overflow-x: hidden; 
 }
+
+/* ------------------- https://stackoverflow.com/questions/37618091/remove-small-gap-between-nav-and-header*/
 
 body {
     font-family: "Karla", sans-serif;
@@ -89,6 +93,15 @@ body {
     font-weight: 400;
     letter-spacing: 1px;
     position: relative;
+}
+
+a.btn-light {
+    color: black;
+    width: auto;
+}
+
+.menuitem a:hover {
+    text-decoration: underline;
 }
 
 
@@ -382,15 +395,7 @@ body {
     text-decoration: none;
 }
 
-.menuitem a:hover {
-    text-decoration: underline;
-}
-
 .socials a {
     color: white !important;
 }
 
-a.btn-light {
-    color: black;
-    width: auto;
-}
